# ai_legal_support_system

./: .env.example  .gitignore  README.md  build.sh  main.py  manage.py  pyproject.toml  render.yaml  requirements.txt  test.py
accounts/: admin.py  apps.py  models.py  profile_views.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_casequery_options_alter_lawyerprofile_options_and_more.py  0003_alter_casequery_options_alter_lawyerprofile_options_and_more.py  0004_lawyerprofile_online_availability.py  0005_casequery_fir_image_path.py
ai_engine/: __init__.py  build_index.py  config.py  embedder.py  language_processor.py  law_books.py  lawyer_loader.py  ocr_processor.py  rag_engine.py
ai_legal_support_system/: asgi.py  settings.py  urls.py  wsgi.py
data/lawyers/: lawyer_dataset1.csv  lawyer_dataset2.csv  lawyer_dataset3.csv
legal_api/: apps.py  urls.py  views.py
templates/: base.html  forgot_password.html  index.html  lawyer_profile.html  reset_password.html  signup_login.html
templates/accounts/: change_password.html  confirm_deletion.html  edit_profile.html  profile.html
